# fa

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: change-request.md  defect-report.md  feature-request.md  risk-log.md
.github/workflows/: ci.yml  release.yml
apps/fa-server/: Cargo.toml
apps/fa-server/src/: experience.rs  main.rs
apps/fa-server/src/ui/: app.css  app.js  index.html
crates/fa-core/: Cargo.toml
crates/fa-domain/: Cargo.toml
docs/: architecture.md  project-charter.md  release-process.md  roadmap.md
docs/adr/: 0001-platform-foundation.md
docs/design/: experience-command-center-direction.md  m1-alert-triage-alert-cluster-event-ingestion-direction.md  m1-alert-triage-alignment-checklist.md  m1-alert-triage-task-read-model-implementation-cut.md  m1-alert-triage-workflow-spec.md  m1-follow-up-sla-model-alignment-checklist.md  m1-follow-up-sla-read-model-query-direction.md  m1-follow-up-task-read-model-implementation-cut.md  m1-lifecycle-and-abstractions.md  m1-pilot-workflow-spec.md  m1-quality-deviation-workflow-spec.md  m1-quality-qms-mock-connector-baseline.md  m1-quality-workflow-alignment-checklist.md  m1-shift-handoff-alignment-checklist.md  m1-shift-handoff-receipt-acknowledgement-direction.md  m1-shift-handoff-task-receipt-read-model-implementation-cut.md  m1-shift-handoff-workflow-spec.md
docs/development/: local-environment.md
docs/governance/: README.md  delivery-lifecycle.md  (+2 more)
scripts/: smoke_v0_2_0.sh  smoke_v0_2_0_sandbox.sh
(+123 files in other folders)
